# Janus

./: .gitignore  BUILD.md  CMakeLists.txt  LICENCE.md  README.md  configure  configure.in
Examples/: CMakeLists.txt  CombinedExample.cpp  CombinedExample.xml  GriddedTableExample.cpp  GriddedTableExample.xml  JanusVariableManagerExample.cpp  JanusVariableManagerExample.xml  MathMLExample.cpp  MathMLExample.xml  SetVarDefExample.cpp  SetVarDefExample.xml
Janus/: Array.cpp  Array.h  Author.cpp  Author.h  Bounds.cpp  Bounds.h  BreakpointDef.cpp  BreakpointDef.h  CMakeLists.txt  CheckData.cpp  CheckData.h  CheckInputs.h  CheckOutputs.h  CheckSignal.cpp  CheckSignal.h  Denominator.h  DimensionDef.cpp  DimensionDef.h  DomFunctions.cpp  DomFunctions.h  DomTypes.h  ElementDefinitionEnum.h  ExportMathML.cpp  ExportMathML.h  FileHeader.cpp  FileHeader.h  Function.cpp  Function.h  FunctionDefn.cpp  FunctionDefn.h  GetDescriptors.cpp  GriddedTableDef.cpp  GriddedTableDef.h  InDependentVarDef.cpp  InDependentVarDef.h  InternalValues.h  Janus.cpp  Janus.h  JanusConfig.h  JanusConfig.h.in  (+57 more)
SFunction/: JanusSFunction.cpp  janusfun.cpp
Tools/: CMakeLists.txt  dmlEval.cpp
UnitConverter/: convert.cpp  convert.def  units.cpp  units.h
Ute/: CMakeLists.txt  UteConfig.h  UteConfig.h.in  aBiMap.h  aCrypt.cpp  aCrypt.h  aFile.h  aFileBuffer.h  aIntegrator.cpp  aIntegrator.h  aList.h  aMap.h  aMath.h  aMatrix.h  aMessageStream.cpp  aMessageStream.h  aMutex.h  aOptional.h  aRealTimeClock.h  aString.cpp  aString.h  aUnits.cpp  aUnits.h  exprtk_matrix.hpp
cmake/: FindOpenSSL.cmake  ReadCFG.cmake
